--- a/index.html
+++ b/index.html
@@ -1,1 +1,90 @@
-test
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://fonts.cdnfonts.com/css/wedding" rel="stylesheet">
+    <style>
+        .font-wedding {
+            font-family: 'Wedding', sans-serif;
+        }
+    </style>
+</head>
+
+<body>
+
+    <div class="min-vh-100 d-flex flex-column justify-content-center align-items-center">
+        <div class="position-relative">
+            <img class="w-100" src="flora center.png">
+            <div class="position-absolute text-center font-wedding" style="top: 10%;right: 29%;">
+                <p class="m-0" style="font-size:9vw">ALIA</p>
+                <p class="m-0" style="font-size:9vw">&</p>
+                <p class="m-0" style="font-size:9vw">SYAHMIL</p>
+                <p class="m-0" style="font-size:4vw">FEBRUARI</p>
+                <p class="m-0" style="font-size:4vw">AHAD <b>11</b> 2024</p>
+                <p class="m-0" style="font-size:4vw">DEWAN PUSTAKA</p>
+                <p class="m-0" style="font-size:4vw">NEGERI SARAWAK</p>
+            </div>
+        </div>
+    </div>
+    <div class="container text-center pt-md-5 position-relative">
+            <img class="w-100" src="assalaamualaikum.jpg">
+            <p class="m-0 py-2" style="font-size:3vw">DENGAN NAMA ALLAH YANG MAHA PENGASIH LAGI MAHA PENYAYANG</p>
+            <p class="m-0 pt-2 fw-bold" style="font-size:4vw">RAMBLI BIN SULAIMAN</p>
+            <p class="m-0 fw-bold" style="font-size:4vw">SADIAH BINTI HJ JARAWI</p>
+            <p class="m-0" style="font-size:3vw">&</p>
+            <p class="m-0 fw-bold" style="font-size:4vw">SULAIMAN BIN SAID</p>
+            <p class="m-0 fw-bold" style="font-size:4vw">ROSITA BINTI SEBLI</p>
+            <p class="m-0 pt-3" style="font-size:3vw">DENGAN HORMATNYA KAMI MENJEMPUT</p>
+            <p class="m-0" style="font-size:3vw">DATO/DATIN/TUAN/PUAN/ENCIK/CIK</p>
+            <div class="my-2 w-75 m-auto" style="height: 10px; background: #d8c4dc"></div>
+            <p class="m-0" style="font-size:3vw">KE MAJLIS PERKAHWINAN ANAKANDA KAMI,</p>
+            <p class="m-0 pt-2 fw-bold" style="font-size:5vw">Alia Syafina binti Rambli</p>
+            <p class="m-0" style="font-size:2vw">DENGAN PASANGANNYA</p>
+            <p class="m-0 fw-bold" style="font-size:5vw">Muhamad Syahmil Aiman bin Sulaiman</p>
+            <p class="m-0" style="font-size:3vw">PADA</p>
+            <p class="m-0" style="font-size:3vw">AHAD</p>
+            <div class="d-flex justify-content-center align-items-center gap-4">
+                <p class="m-0" style="font-size:4vw">FEB</p>
+                <p class="m-0" style="font-size:4vw">|</p>
+                <p class="m-0" style="font-size:8vw">11</p>
+                <p class="m-0" style="font-size:4vw">|</p>
+                <p class="m-0" style="font-size:4vw">2024</p>
+            </div>
+            <p class="m-0" style="font-size:3vw">BERTEMPAT DI</p>
+            <p class="m-0" style="font-size:3vw">DEWAN PUSTAKA NEGERI SARAWAK</p>
+
+            <div class="my-4 w-75 m-auto " style="height: 2px; background: #d8c4dc"></div>
+            
+            <p class="m-0 fw-bold" style="font-size:3vw">Firman Allah S.W.T</p>
+            <p class="m-0" style="font-size:3vw">“Dan di antara tanda-tanda kekuasaan-Nya ialah Dia menciptakan untukmu istri-istri dari jenismu sendiri, supaya kamu cenderung merasa tenteram kepadanya,dan dijadikan-Nya di antaramu rasa kasih dan sayang. Sesungguhnya pada yang demikian itu benar-benar terdapat tanda-tanda bagikaum yang berfikir,”</p>
+            <p class="m-0" style="font-size:3vw">(QS Ar-Rum: 21)</p>
+
+            <img class="py-4 w-100" src="yellow-thingy.PNG">
+
+            <p class="m-0" style="font-size:3vw">HUBUNGI</p>
+            <div class="py-4 d-flex justify-content-around">
+                <p class="m-0" style="font-size:3vw">012-8581798(SULAIMAN)</p>
+                <p class="m-0" style="font-size:3vw">019-8287906 (SYAHMI)</p>
+            </div>
+            <p class="m-0" style="font-size:3vw">IMBAS UNTUK LOKASI</p>
+            <img class="py-4 w-25" src="qr_code.PNG">
+            <p class="m-0" style="font-size:3vw">Semoga dengan iringan doa restu</p>
+            <p class="m-0" style="font-size:3vw">dari anda sekalian, majlis ini akan berjalan</p>
+            <p class="m-0" style="font-size:3vw">dengan lancar.</p>
+            <p class="m-0" style="font-size:3vw">InshaAllah</p>
+            <p class="m-0 fw-bold" style="font-size:3vw">Terima Kasih</p>
+
+            <img class="w-100 position-absolute start-0" src="flora bottom.jpg">
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+    </script>
+</body>
+
+</html>
