--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="https://fonts.cdnfonts.com/css/wedding" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="wedding.css" rel="stylesheet">
     <style>
         .font-wedding {
             font-family: 'Wedding', sans-serif;
@@ -20,10 +19,11 @@
     <div class="min-vh-100 d-flex flex-column justify-content-center align-items-center">
         <div class="position-relative">
             <img class="w-100" src="flora center.png">
-            <div class="position-absolute text-center font-wedding" style="top: 10%;right: 29%;">
-                <p class="m-0" style="font-size:9vw">ALIA</p>
-                <p class="m-0" style="font-size:9vw">&</p>
-                <p class="m-0" style="font-size:9vw">SYAHMIL</p>
+            <div class="position-absolute text-center font-wedding" style="top: 12%;right: 32%;">
+                <p class="m-0" id="circular" style="font-size:3vw">WALIMATULURUS</p>
+                <p class="m-0 fw-bold" style="font-size:7vw">ALIA</p>
+                <p class="m-0" style="font-size:7vw">&</p>
+                <p class="m-0 fw-bold" style="font-size:7vw">SYAHMIL</p>
                 <p class="m-0" style="font-size:4vw">FEBRUARI</p>
                 <p class="m-0" style="font-size:4vw">AHAD <b>11</b> 2024</p>
                 <p class="m-0" style="font-size:4vw">DEWAN PUSTAKA</p>
@@ -78,12 +78,14 @@
             <p class="m-0" style="font-size:3vw">dengan lancar.</p>
             <p class="m-0" style="font-size:3vw">InshaAllah</p>
             <p class="m-0 fw-bold" style="font-size:3vw">Terima Kasih</p>
-
-            <img class="w-100 position-absolute start-0" src="flora bottom.jpg">
     </div>
+    <img class="w-100" src="flora bottom.jpg">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+    <script src="bootstrap.bundle.min.js">
+    </script>
+    <script src="circletype.min.js"></script>
+    <script>
+        new CircleType(document.getElementById('circular')).radius(384);
     </script>
 </body>
 
