Update: beautify code

--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
     </div>
     <img class="w-100" src="flora bottom.jpg">
 
-    <script src="bootstrap.bundle.min.js">
-    </script>
+    <script src="bootstrap.bundle.min.js"></script>
     <script src="circletype.min.js"></script>
     <script>
         new CircleType(document.getElementById('circular')).radius(384);
