--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <img class="w-100" src="flora top.jpg">
-    <div class="d-flex flex-column justify-content-center align-items-center pb-4">
+    <div class="pb-4">
         <div class="position-relative">
             <img class="w-100" src="flora center.png">
             <div class="position-absolute text-center font-wedding" style="top: 13%;right: 32%;">
