--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Majlis Perkahwinan Syahmil & Alia</title>
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="wedding.css" rel="stylesheet">
     <style>
